--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/home-screen.css">
+    <script src="https://unpkg.com/akar-icons-fonts"></script>
     <title>HSI audio reader</title>
 </head>
 <body>
-<div class="root">
-    <h1>HSI audio reader</h1>
+    <!-- search -->
+    <div class="root">
+    <div class="container">
+        <div class="card-search">
+            <div class="conten-search">
+                <label for="gsearch"><i class="ai-search"></i></label>
+                <input type="search" id="gsearch" name="gsearch" value="Temukan Materi Pembelajaran Agama">
+            </div>
+        </div>
+    </div>
+
+    <div class="head">
+        <h1> Daftar Silsilah</h1>
+    </div>
+
+    .
 </div>
 </body>
 </html>
